@@ -434,6 +434,10 @@ Rd2latex <- function(Rd, out="", defines=.Platform$OS.type, stages="render",
                    writeContent(block[[1L]], tag)
                },
                "\\tabular" = writeTabular(block),
+               "\\if" = if (testRdConditional("latex", block, Rdfile))
+               	   writeContent(block[[2L]], tag),
+               "\\out" = for (i in seq_along(block))
+		   of1(block[[i]]),              
                stopRd(block, Rdfile, "Tag ", tag, " not recognized")
                )
     }
